--- a/sources/templates/modal/residents.modal.template.html
+++ b/sources/templates/modal/residents.modal.template.html
@@ -33,9 +33,14 @@
 					<div style="clear:both"></div>
 				</div>
 				<div style="width:100%;margin-top:2%;">
-					<div style="width:76%;float:left;padding-left:.33%" >
+					<div style="width:51%;float:left;padding-left:.33%" >
 						ADRESS <br>
 						<input type="text" data-event='ResidentsModalController.change.changeValues' class="form-control" id="ResidentModalAddress" data-event="ResidentsModalController.change.changeValues" data-valuectrl="residentVars.ADDRESS" />
+					</div>
+					<div style="width:25%;float:left;padding-left:.33%" >
+						PUROK <br>
+						<input type="text" class="form-control" data-valuectrl="PUROK_NAME" data-event="ResidentsModalController.click.searchPurok"/>
+							
 					</div>
 					<div style="width:14.67%;float:left;padding-left:.33%" >
 						BIRTHDAY <br>
@@ -47,8 +52,76 @@
 					</div>
 					<div style="clear:both"></div>
 				</div>
-				
+
 				<div style="width:100%;margin-top:2%;">
+					<div style="width:30%;float:left;padding-left:.33%" >
+						EMERGENCY CONTACT NAME <br>
+						<input type="text" class="form-control" data-event="ResidentsModalController.change.changeValues" data-valuectrl="residentVars.EMERGENCY.NAME" />
+					</div>
+					
+					<div style="width:40%;float:left;padding-left:.33%" >
+						ADDRESS <br>
+						<input type="text" class="form-control" data-event="ResidentsModalController.change.changeValues" data-valuectrl="residentVars.EMERGENCY.ADDRESS" />
+					</div>
+					
+					<div style="width:30%;float:left;padding-left:.33%" >
+						PHONE <br>
+						<input type="text" class="form-control" data-event="ResidentsModalController.change.changeValues" data-valuectrl="residentVars.EMERGENCY.CONTACT_NUMBER" />
+					</div>
+					
+					<div style="clear:both"></div>
+				</div>
+
+				<div style="width:100%;margin-top:2%;">
+					<div style="width:15%;float:left;padding-right:2%" >
+						BLOOD TYPE <br>
+						<select  class="form-control" data-valuectrl="residentVars.BLOOD_TYPE" >
+							<option>A+</option>
+							<option>A-</option>
+							<option>B+</option>
+							<option>B-</option>
+							<option>O+</option>
+							<option>O-</option>
+							<option>AB+</option>
+							<option>AB-</option>
+						</select>
+					</div>
+					<div style="width:83%;float:right;">
+						<div style="width:30%;float:left;">
+							COMORDIBITY  <a href="javascript:void(0);" data-event="ResidentsModalController.click.addComordibity">+ADD</a><BR>
+							<div>
+								<table class="table" id="comordibity-table">
+									<!--<thead>
+										<tr>
+											<td>Comordibity</td>
+										</tr>
+									</thead>-->
+									<tbody>
+										
+									</tbody>
+								</table>
+							</div>
+						</div>
+						<div style="width:67%;float:right">
+							VACCINATION  <a href="javascript:void(0);" data-event="ResidentsModalController.click.addVaccine">+ADD</a><BR>
+							<div>
+								<table class="table" id="vaccine-table">
+									<!--<thead>
+										<tr>
+											<td>Comordibity</td>
+										</tr>
+									</thead>-->
+									<tbody>
+										
+									</tbody>
+								</table>
+							</div>
+						</div>
+						<div style="clear:both"></div>
+					</div>
+					<div style="clear:both"></div>
+				</div>
+				<!--<div style="width:100%;margin-top:2%;">
 					<div style="width:25%;float:left;padding-left:.33%" >
 						IS FAMILY LEADER <br>
 						<select  class="form-control" data-valuectrl="residentVars.IS_FAMILY_LEADER"  data-event="ResidentsModalController.change.changefamilyleaderstat">
@@ -70,12 +143,7 @@
 							<option value='1'>YES</option>
 						</select>
 					</div>
-					<div style="width:25%;float:left;padding-left:.33%" >
-						PUROK <br>
-						<input type="text" class="form-control" data-valuectrl="PUROK_NAME" data-event="ResidentsModalController.click.searchPurok"/>
-							
-					</div>
-					<div style="clear:both"></div>
+					
 				</div>
 				<div id="fam-leader-container" style="width:33%;margin-top:2%;">
 					FAMILY HEAD<BR>
@@ -100,8 +168,7 @@
 							</tbody>
 						</table>
 					</div>
-				</div>
-				
+				</div>-->
 			</div>
 			<div style="clear:both"></div>
 			
