--- a/sources/templates/modal/residents.modal.template.html
+++ b/sources/templates/modal/residents.modal.template.html
@@ -9,12 +9,9 @@
 		  <!-- Modal body -->
 		  <div class="modal-body" style="width:100%;">
 			<div style="width:20%;float:left;">
-				<div  id="qrcode" style="width:110%;">
+				<input type='image' id='itemimage' data-event='ResidentsModalController.click.chooselogo' data-valuectrl='itemtemppic'  style='width:90%;height:20%;' />
+				<input id='itemimage_pic' data-valuectrl='residentVars.ITEM_IMAGE' data-event='ResidentsModalController.change.changeProfPic' accept="image/png, image/gif, image/jpeg" type='file' style='display:none;' class='form-control' placeholder='choose your profile picture' />
 				
-				</div>
-				<div >
-				<B><span data-valuectrl="residentVars.RESIDENT_ID"></span></B>
-				</div>
 			</div>
 			<div style="width:80%;float:left;max-height:50vh;overflow-y:scroll;">
 				<div style="width:100%;">
@@ -122,7 +119,7 @@
 					<div style="clear:both"></div>
 				</div>
 				<!--<div style="width:100%;margin-top:2%;">
-					<div style="width:25%;float:left;padding-left:.33%" >
+					<div style="width:25%;float:left;" >
 						IS FAMILY LEADER <br>
 						<select  class="form-control" data-valuectrl="residentVars.IS_FAMILY_LEADER"  data-event="ResidentsModalController.change.changefamilyleaderstat">
 							<option value='1'>YES</option>
@@ -144,7 +141,16 @@
 						</select>
 					</div>
 					
+				</div>-->
+
+				<div style="width:33%;margin-top:2%;" >
+					IS FAMILY LEADER <br>
+					<select  class="form-control" data-valuectrl="residentVars.IS_FAMILY_LEADER"  data-event="ResidentsModalController.change.changefamilyleaderstat">
+						<option value='1'>YES</option>
+						<option value='0'>NO</option>
+					</select>
 				</div>
+				
 				<div id="fam-leader-container" style="width:33%;margin-top:2%;">
 					FAMILY HEAD<BR>
 					<input class="form-control" type="text" data-valuectrl="hh_leader" disabled />
@@ -168,7 +174,16 @@
 							</tbody>
 						</table>
 					</div>
-				</div>-->
+				</div>
+				<div style="width:33%;margin-top:5%;" >
+					<b>QRCODE</b><BR>
+					<div  id="qrcode" style="width:110%;">
+				
+					</div>
+					<div >
+					<!--<B><span data-valuectrl="residentVars.RESIDENT_ID"></span></B>-->
+					</div>
+				</div>
 			</div>
 			<div style="clear:both"></div>
 			
