--- a/sources/templates/modal/new.location.modal.template.html
+++ b/sources/templates/modal/new.location.modal.template.html
@@ -4,7 +4,7 @@
 	      <!-- Modal Header -->
 		  <div class="modal-header basic">
 			<h4 class="modal-title">Location Modal</h4>
-			<button type="button" class="close" data-event="NewLocationModal.click.onClose">&times;</button>
+			<button type="button" class="close" data-event="NewLocationModal.click.closeNewLocation">&times;</button>
 		  </div>
 		  <!-- Modal body -->
 		  <div class="modal-body row">
@@ -12,35 +12,37 @@
 				Type <br>
 				<select class="form-control" data-event="NewLocation.change.changeValues" data-valuectrl="LOC_TYPE">
 					<option value="HH">🏠 HOUSEHOLD</option>
-					<option value="B">🏬 BUSINESS</option>
-					<option value="H">🏥 HOSPITAL</option>
-					<option value="S">🏫 SCHOOL</option>
 					<option value="P">🅿 PUROK</option>
+					<!--<option disabled value="B">🏬 BUSINESS</option>
+					<option disabled value="H">🏥 HOSPITAL</option> 
+					<option disabled value="S">🏫 SCHOOL</option>-->
 				</select>
 			</div>
-			<div class="col-md-6" >
+			<div class="col-md-6">
 				Name <br>
 				<div class="icon-addon addon-md">
-						<input type="text" placeholder="LOCATION" class="form-control arial-font" id="locname" data-valuectrl="LOC_NAME">
-						<label data-event="NewLocationModal.click.searchNames" style="cursor:pointer" for="locname" class="glyphicon icon-search" rel="tooltip" title="location"></label>
-					</div>
-				
+					<input type="text" placeholder="LOCATION" class="form-control arial-font" id="locname" data-valuectrl="LOC_NAME">
+					<label data-event="NewLocationModal.click.searchNames" style="cursor:pointer" for="locname" class="glyphicon icon-search" rel="tooltip" title="location"></label>
+				</div>
 			</div>
-			
-			<div class="col-md-6" >
+			<div class="col-md-8" >
+				<BR>FULL ADDRESS <br>
+				<input type="text" class="form-control" data-valuectrl="FULL_ADDRESS" disabled />
+			</div>
+			<!--<div class="col-md-6" >
 				<BR>LAT <br>
 				<input type="text" class="form-control" data-valuectrl="LAT" disabled />
 			</div>
 			<div class="col-md-6" >
 				<BR>LNG <br>
 				<input type="text" class="form-control" data-valuectrl="LNG" disabled />
-			</div>
+			</div>-->
 		  </div>
 		  <!-- Modal footer -->
 		  <div class="modal-footer">
 			<button data-event="NewLocationModal.click.save" class="btn btn-primary"><i class="icon-arrow-down" ></i> SAVE</button>
-			<button data-event="NewLocationModal.click.delete" class="btn btn-danger"><i class="icon-remove"></i> REMOVE LOC</button>
-			<button data-event="NewLocationModal.click.open" class="btn btn-info"><i class="icon-search"></i> MORE INFO...</button>
+			<button data-event="NewLocationModal.click.delete" class="btn btn-danger"><i class="icon-remove"></i> REMOVE</button>
+			<button data-event="NewLocationModal.click.open" class="btn btn-info"><i class="icon-search"></i> INFO</button>
 		  </div>
 		</div>
 	</div>
