--- a/sources/templates/section/resident.dashboard.template.html
+++ b/sources/templates/section/resident.dashboard.template.html
@@ -4,7 +4,7 @@
 			SCAN RECEIPIENTS
 		</div>
 		<div style="height:95%;">
-			<div style="width:50%;float:left;height:100%;" id="qrcode"></div>
+			<div style="width:50%;float:left;height:100%;" id="qrcode11"></div>
 			<div style="width:50%;float:right;padding:1%;height:100%;border:1px solid #ccc;height:100%;">
 				<div style="height:8%;width:100%;">
 					<div style="float:left;width:12%;padding-top:1%;"><b>ENTER ID</b></div> 
