--- a/sources/templates/section/resident.section.template.html
+++ b/sources/templates/section/resident.section.template.html
@@ -1,9 +1,9 @@
 <div id="resident-section" data-controller="ResidentSectionController" style="height:100%;">
 	<div style="width:100%;height:100%;">
-		<div style="with:100%;height:5%;">
+		<div style="width:100%;height:5%;">
 			RESIDENTS of <span data-valuectrl="brgyname"></span>
 		</div>
-		<div style="with:100%;height:95%;">
+		<div style="width:100%;height:95%;">
 			<div style="height:10%;width:100%">
 				<div style="width:23%;float:left">
 					Fullname<br>
